force-app/main/default/objects/Matter_Payer__c/Matter_Payer__c.object-meta.xml
<CustomObject>
    <description>Junction record that assigns payer roles and order to a Matter.</description>
    <label>Matter Payer</label>
    <nameField>
        <displayFormat>MP-{0000}</displayFormat>
        <label>Matter Payer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matter Payers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>