force-app/main/default/objects/Matter_Payer__c/fields/Assignment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Notes__c</fullName>
    <label>Assignment Notes</label>
    <type>TextArea</type>
</CustomField>