force-app/main/default/objects/Matter_Payer__c/fields/Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Group_Number__c</fullName>
    <label>Group Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>