force-app/main/default/objects/Matter_Payer__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <formula>OR(Payer_Order__c = 1, ISPICKVAL(Payer_Role__c, &quot;Primary&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>