force-app/main/default/objects/Matter_Payer__c/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <label>Matter</label>
    <referenceTo>Matter__c</referenceTo>
    <relationshipLabel>Matter Payers</relationshipLabel>
    <relationshipName>Matter_Payers</relationshipName>
    <type>MasterDetail</type>
</CustomField>