force-app/main/default/objects/Matter_Payer__c/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Payer</label>
    <referenceTo>Payer__c</referenceTo>
    <relationshipLabel>Matter Payers</relationshipLabel>
    <relationshipName>Payer_Matter_Payers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>