force-app/main/default/objects/Matter_Payer__c/fields/Payer_Order__c.field-meta.xml
<CustomField>
    <fullName>Payer_Order__c</fullName>
    <label>Payer Order</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>