force-app/main/default/objects/Matter_Payer__c/validationRules/Payer_Order_In_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Payer_Order_In_Range</fullName>
    <active>true</active>
    <description>Primary, Secondary, and Tertiary payer roles must use payer order 1, 2, or 3.</description>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Payer_Role__c, &quot;Primary&quot;),
        ISPICKVAL(Payer_Role__c, &quot;Secondary&quot;),
        ISPICKVAL(Payer_Role__c, &quot;Tertiary&quot;)
    ),
    OR(
        ISBLANK(Payer_Order__c),
        Payer_Order__c &lt; 1,
        Payer_Order__c &gt; 3
    )
)</errorConditionFormula>
    <errorDisplayField>Payer_Order__c</errorDisplayField>
    <errorMessage>Payer order must be 1, 2, or 3 for Primary, Secondary, and Tertiary payer roles.</errorMessage>
</ValidationRule>