force-app/main/default/objects/Matter_Payer__c/validationRules/Payer_Role_Order_Match.validationRule-meta.xml
<ValidationRule>
    <fullName>Payer_Role_Order_Match</fullName>
    <active>true</active>
    <description>Keeps payer role and payer order aligned for the demo model.</description>
    <errorConditionFormula>OR(
    AND(ISPICKVAL(Payer_Role__c, &quot;Primary&quot;), Payer_Order__c &lt;&gt; 1),
    AND(ISPICKVAL(Payer_Role__c, &quot;Secondary&quot;), Payer_Order__c &lt;&gt; 2),
    AND(ISPICKVAL(Payer_Role__c, &quot;Tertiary&quot;), Payer_Order__c &lt;&gt; 3)
)</errorConditionFormula>
    <errorDisplayField>Payer_Order__c</errorDisplayField>
    <errorMessage>Primary must be order 1, Secondary must be order 2, and Tertiary must be order 3.</errorMessage>
</ValidationRule>